--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>React Vite Micro App</title>
+    <title>BuchaBarn</title>
   </head>
   <body>
     <div id="root"></div>
