--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <script src="https://js.stripe.com/v3/"></script>
     <meta content="width=device-width, initial-scale=1" name="viewport" />
     <title>BuchaBarn</title>
   </head>
